--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,11 +8,38 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_home">Course de bille</string>
+    <string name="menu_gallery">Comparateur</string>
+    <string name="menu_slideshow">Catalogue</string>
     <string name="menu_tools">Tools</string>
     <string name="menu_share">Share</string>
     <string name="menu_send">Send</string>
+
+
+    <string name="tv_add_label_name">Nom :</string>
+    <string name="tv_add_label_origine">Origine :</string>
+    <string name="tv_add_label_annee">Annee :</string>
+    <string name="tv_add_label_conso">Consomation :</string>
+    <string name="tv_add_label_vitmax">Vitesse maximum :</string>
+    <string name="tv_add_label_cv">Chevaux :</string>
+    <string name="tv_add_label_poind">Poids :</string>
+    <string name="tv_add_label_zeroaCent">0 a 100 :</string>
+    <string name="btn_add_button">Ajouter</string>
+
+    <string name="btn_last">last</string>
+    <string name="btn_next">next</string>
+
+    <string name="btn_connexion">Connexion</string>
+    <string name="btn_noAccount">Dont have account</string>
+
+    <string name="tv_comparateur_select">Choisissez les voitures a comparer</string>
+    <string name="tv_voiture">Voiture</string>
+    <string name="tv_cv">Chevaux</string>
+    <string name="tv_vm">Vitesse maximum</string>
+    <string name="tv_poid">Poids</string>
+    <string name="tv_zeroACent">0 a 100</string>
+    <string name="tv_nomvl">iiiiiiiiiiiiii</string>
+
+
 
 </resources>
